# bitcoinrpc-rust-client

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: get_new_address.rs
src/: bitcoin_rpc_api.rs  bitcoincore.rs  lib.rs  stub_rpc_client.rs
src/types/: address.rs  block.rs  blockchain.rs  keys.rs  mod.rs  script.rs  transaction.rs
src/types/serde/: network.rs
tests/: integration_tests.rs  rpc_calls.rs
tests/common/: assert.rs  mod.rs  test_client.rs
