[package]
name = "bitcoin_rpc_client"
version = "0.1.1"
authors = [
    "Thomas Eizinger <thomas@coblox.tech>",
    "Philipp Hoenisch <philipp@coblox.tech>",
    "Franck Royer <franck@coblox.tech>",
    "Lloyd Fournier <lloyd@coblox.tech>",
]
description = "Rust client library for talking to Bitcoin Core nodes using JsonRPC."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/bitcoinrpc_rust_client"
categories = ["api-bindings"]
keywords = ["bitcoin", "rpc", "client"]

[dependencies]
bitcoin = "0.14.0"
hex = "0.3.2"
jsonrpc_client = "0.1.0"
serde_json = "1.0.22"
serde_derive = "1.0.66"
serde = "1.0.66"
log = "0.4.3"

[dev-dependencies]
env_logger = "0.5.10"
tc_coblox_bitcoincore = "0.1.0"
testcontainers = "0.2.0"
