[package]
name = "bitcoin_rpc_client"
version = "0.6.0"
authors = [ "CoBloX developers <team@coblox.tech>" ]
description = "Rust client library for talking to Bitcoin Core nodes using JsonRPC."
license = "MIT OR Apache-2.0"
repository = "https://github.com/coblox/bitcoinrpc_rust_client"
categories = ["api-bindings"]
keywords = ["bitcoin", "rpc", "client"]

[dependencies]
base64 = "0.9"
bitcoin = { version = "0.18", features = ["use-serde"] }
bitcoin_hashes = "0.3.2"
hex = "0.3"
jsonrpc_client = "0.2"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
env_logger = "0.6"
testcontainers = "0.7"
